--- a/assets/css/concept.css
+++ b/assets/css/concept.css
@@ -68,6 +68,7 @@ button{
     object-fit: contain; /* Maintain aspect ratio without cropping */
     background-color: rgba(0, 0, 0, 0.5); /* Semi-transparent background */
     cursor: pointer; /* Change cursor to indicate it can be closed */
+    margin-top: 0 !important;
 }
 
 
